# eratosthene-suite

./: .gitignore  .gitmodules
lib/libcommon/: CMakeLists.txt
src/eratosthene-client/src/: eratosthene-client-cell.c  eratosthene-client-model.c  eratosthene-client-view.c
src/eratosthene-stream/: .gitignore  CMakeLists.txt  README.MD
src/eratosthene-stream/shaders/: shader.vert
src/eratosthene-stream/src/: data-client.cpp  data-client.h  engine.cpp  engine.h  entry-server.cpp  entry-server.h  models.h  server.cpp  server.h  utils.cpp  utils.h  video-client.cpp  video-client.h  video-engine.cpp  video-engine.h  video-streamer.h
src/eratosthene-stream/web/: index.html  main.js
